add gif and color

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Hello</h1>
+    <div class="tenor-gif-embed" data-postid="9217050161139992617" data-share-method="host" data-aspect-ratio="1.76596"
+        data-width="100%"><a
+            href="https://tenor.com/view/sasayaku-you-ni-koi-wo-utau-sasakoi-whisper-me-a-love-song-himari-kino-gif-9217050161139992617">Sasayaku
+            You Ni Koi Wo Utau Sasakoi GIF</a>from <a
+            href="https://tenor.com/search/sasayaku+you+ni+koi+wo+utau-gifs">Sasayaku You Ni Koi Wo Utau GIFs</a></div>
+    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+    
 </body>
+
 </html>
